Generate new release

--- a/release/toc.html
+++ b/release/toc.html
@@ -34,7 +34,7 @@
 <a href="book.html#_form_helpers_chapter_unstarted"><b>Form helpers (chapter unstarted)</b></a><br/>
 <a href="book.html#_event_binding_chapter_unstarted"><b>Event binding (chapter unstarted)</b></a><br/>
 <a href="book.html#_cleaning_up_understanding_binding_and_unbinding_in_progress"><b>Cleaning up: understanding binding and unbinding (in progress)</b></a><br/>
-<a href="book.html#_swapping_controllers_in_progress"><b>Swapping controllers (in progress)</b></a><br/>
+<a href="book.html#_swapping_router_in_progress"><b>Swapping router (in progress)</b></a><br/>
 <a href="book.html#_composite_views_in_progress"><b>Composite views (in progress)</b></a><br/>
 <a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection_chapter_unstarted"><b>How to use multiple views on the same model/collection (chapter unstarted)</b></a><br/>
 <a href="book.html#_internationalization_chapter_unstarted"><b>Internationalization (chapter unstarted)</b></a><br/>
@@ -49,10 +49,12 @@
 <a href="book.html#_validations_chapter_unstarted"><b>Validations (chapter unstarted)</b></a><br/>
 <a href="book.html#_synchronizing_between_clients_chapter_unstarted"><b>Synchronizing between clients (chapter unstarted)</b></a><br/>
 <h3><b>Chapter 8<br/>
+<a href="book.html#_binding_models_and_views_section_unstarted">Binding models and views (section unstarted)</a></b></h3><br/>
+<h3><b>Chapter 9<br/>
 <a href="book.html#_testing_section_unstarted">Testing (section unstarted)</a></b></h3><br/>
 <a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
 <a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
-<h3><b>Chapter 9<br/>
+<h3><b>Chapter 10<br/>
 <a href="book.html#_the_javascript_language_section_unstarted">The JavaScript language (section unstarted)</a></b></h3><br/>
 <a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
 <a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
