--- a/release/toc.html
+++ b/release/toc.html
@@ -59,4 +59,8 @@
 <a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
 <a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
 <a href="book.html#_coffeescript_with_backbone_js"><b>CoffeeScript with Backbone.js</b></a><br/>
+<h3><b>Chapter 11<br/>
+<a href="book.html#_security_stub">Security (stub)</a></b></h3><br/>
+<a href="book.html#_xss_with_json_bootstrapping_stub"><b>XSS with JSON bootstrapping (stub)</b></a><br/>
+<a href="book.html#_xss_in_html_templates_stub"><b>XSS in HTML templates (stub)</b></a><br/>
 <h1 class="centered">* * *</h1></div></body></html>
