Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -1471,7 +1471,18 @@ http://www.gnu.org/software/src-highlite -->
 include the name and email of the associated user nested within the task JSON
 representation. Something like this:</p></div>
 <div class="listingblock">
-<div class="content"></div></div>
+<div class="content"><!-- Generator: GNU source-highlight 3.1.4
+by Lorenzo Bettini
+http://www.lorenzobettini.it
+http://www.gnu.org/software/src-highlite -->
+<pre><tt><span style="color: #FF0000">{</span>
+  <span style="color: #FF0000">"title"</span><span style="color: #990000">:</span> <span style="color: #FF0000">"Buy more Cheeseburgers"</span><span style="color: #990000">,</span>
+  <span style="color: #FF0000">"due_date"</span><span style="color: #990000">:</span> <span style="color: #FF0000">"2011-03-04"</span><span style="color: #990000">,</span>
+  <span style="color: #FF0000">"user"</span><span style="color: #990000">:</span> <span style="color: #FF0000">{</span>
+    <span style="color: #FF0000">"name"</span><span style="color: #990000">:</span> <span style="color: #FF0000">"Robert McGraffalon"</span><span style="color: #990000">,</span>
+    <span style="color: #FF0000">"email"</span><span style="color: #990000">:</span> <span style="color: #FF0000">"bobby@themcgraffalons.com"</span>
+  <span style="color: #FF0000">}</span>
+<span style="color: #FF0000">}</span></tt></pre></div></div>
 <div class="paragraph"><p>Now that we receive user data with the task&#8217;s JSON representation, let&#8217;s tell
 our Backbone User model to store the User object. We do that on the task&#8217;s
 initializer. Here&#8217;s a first cut at that:</p></div>
@@ -1779,7 +1790,7 @@ http://www.gnu.org/software/src-highlite -->
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-07-28 19:08:58 EDT
+Last updated 2011-07-28 19:10:33 EDT
 </div>
 </div>
 </body>
