Generate new release

--- a/release/ar01s05.html
+++ b/release/ar01s05.html
@@ -385,7 +385,7 @@ var Task = Backbone.Model.extend({
   modelName: "task",
 
   // ...
-});</pre></div></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_converting_an_existing_page_view_area_to_use_backbone_js_in_progress"></a>Converting an existing page/view area to use Backbone.js (in progress)</h3></div></div></div><p>We’ll cover Backbone.js Views and Templates in more detail in the Routers,
+});</pre></div></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_converting_an_existing_page_view_area_to_use_backbone_js"></a>Converting an existing page/view area to use Backbone.js</h3></div></div></div><p>We’ll cover Backbone.js Views and Templates in more detail in the Routers,
 Views, and Templates chapter, but this section is meant to get you started
 understanding how Backbone.js views work by illustrating the conversion of a
 Rails view to a Backbone.js view.</p><p>Its important to note that a Rails view is not directly analogous to a
