--- a/release/book.html
+++ b/release/book.html
@@ -1391,7 +1391,7 @@ http://www.gnu.org/software/src-highlite -->
 </div>
 </div>
 <div class="sect2">
-<h3 id="_converting_an_existing_page_view_area_to_use_backbone_js_in_progress">Converting an existing page/view area to use Backbone.js (in progress)</h3>
+<h3 id="_converting_an_existing_page_view_area_to_use_backbone_js">Converting an existing page/view area to use Backbone.js</h3>
 <div class="paragraph"><p>We&#8217;ll cover Backbone.js Views and Templates in more detail in the Routers,
 Views, and Templates chapter, but this section is meant to get you started
 understanding how Backbone.js views work by illustrating the conversion of a
@@ -3190,7 +3190,7 @@ http://www.gnu.org/software/src-highlite -->
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-08-25 10:39:59 EDT
+Last updated 2011-08-25 10:42:45 EDT
 </div>
 </div>
 </body>
