--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -603,7 +603,7 @@ var Task = Backbone.Model.extend({
 </div>
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h3 class="title">
-<a id="_converting_an_existing_page_view_area_to_use_backbone_js_in_progress"></a>Converting an existing page/view area to use Backbone.js (in progress)</h3></div></div></div>
+<a id="_converting_an_existing_page_view_area_to_use_backbone_js"></a>Converting an existing page/view area to use Backbone.js</h3></div></div></div>
 <p>We’ll cover Backbone.js Views and Templates in more detail in the Routers,
 Views, and Templates chapter, but this section is meant to get you started
 understanding how Backbone.js views work by illustrating the conversion of a
