--- a/release/toc.html
+++ b/release/toc.html
@@ -27,7 +27,7 @@
 <a href="book.html#_rails_3_1"><b>Rails 3.1</b></a><br/>
 <a href="book.html#_an_overview_of_the_stack_connecting_rails_and_backbone_js"><b>An Overview of the Stack: Connecting Rails and Backbone.js</b></a><br/>
 <a href="book.html#_customizing_your_rails_generated_json"><b>Customizing your Rails-generated JSON</b></a><br/>
-<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js_in_progress"><b>Converting an existing page/view area to use Backbone.js (in progress)</b></a><br/>
+<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js"><b>Converting an existing page/view area to use Backbone.js</b></a><br/>
 <a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_routers_views_and_templates">Routers, Views, and Templates</a></b></h3><br/>
